code/tui/src/config/snapshots/config__provider__tests__provider_click_to_edit.snap
---
source: code/tui/src/config/provider_tests.rs
expression: "text(&render(&panel, 80, 25, Instant::now()))"
---
> Provider name
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ N                                                                        │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Base URL
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ h                                                                        │
  ╰──────────────────────────────────────────────────────────────────────────╯
  API key
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ API key (optional)                                                       │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Model ID
  ╭──────────────────────────────────────────────────────────────────────────╮
  │ Leave empty to use the selected built-in model                           │
  ╰──────────────────────────────────────────────────────────────────────────╯
  API type                                                    OpenAI Responses
  Model context window                                                    272k
● Test
